--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,8 +9,7 @@
     "esModuleInterop": true,
     "module": "esnext",
     "moduleResolution": "bundler",
-    
-
+    "noUncheckedIndexedAccess": false,
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
