--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "next": "15.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.5.2",
     "react-timeago": "^8.2.0",
+    "sooner": "^1.1.4",
     "tailwind-merge": "^3.2.0"
   },
   "devDependencies": {
